--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teste anychart</title>
-    <script src="./js/app.js"></script>
-   
-<body>
-    <div id="container" style="width: 500px; height: 400px;"></div>
-    
+    <meta charset='UTF-8'>
+    <title>Teste 1</title>
+</head>
+
+<body class="conteudo exercicio">
+    <h1>Teste</h1>
+
+    <script>
+        function ajax(config) {
+            const xhr = new XMLHttpRequest()
+            xhr.open(config.metodo , config.url, true)
+
+            xhr.onload = e => {
+                if (xhr.status === 200) {
+                    config.sucesso(xhr.response)
+                } else if (xhr.status >= 400) {
+                    config.erro({
+                        codigo: xhr.status,
+                        text: xhr.statusText
+                    })
+                }
+            }
+            xhr.send() 
+        }
+
+        ajax ({
+            url: "dados/result.json",
+            metodo: "get",
+            sucesso(response) {
+                const result = JSON.parse(response)
+                console.log(result)
+            },
+            erro(e) {
+                const msg = document.createTextNode(`${e.codigo}: ${e.text}`)
+            }
+        })
+    </script>
 </body>
-</html>
