--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset='UTF-8'>
     <title>Teste 1</title>
     <script src="./js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 </head>
 
 <body class="conteudo exercicio">
     <h1>Teste</h1>
+
+    <canvas id="primeiroGrafico"></canvas>
 </body>
