adicionando titulo aos graficos no lugar correto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body class="conteudo exercicio">
     <h1>Teste</h1>
-    <select id="tipos">
+    <select id="tipos" required="required">
+        <option name="select" value="" selected="" disabled="">Selecione uma opção</option>
         <option value="pi">Pizza</option>
         <option value="ba">Barras</option>
     </select>
