Adicionando escolha de pergunta e aumentando comentarios

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 
 <body class="conteudo exercicio">
     <h1>Teste</h1>
+    <h2>As cores são geradas automaticamente, cores parecidas não tem intenção de confundir</h2>
+    <select id="resposta" required="required">
+        <option name="select" value="" selected="" disabled="">Selecione uma opção</option>
+        <option value="19">idade</option>
+        <option value="7">Onde utiliza Computadores</option>
+        <option value="9">Horário de trabalho</option>
+        <option value="29">Quantos itens no domicílio</option>
+        <option value="30">No seu domicílio tem</option>
+        <option value="39">Entretenimento</option>
+    </select>
+
+
+
     <select id="tipos" required="required">
         <option name="select" value="" selected="" disabled="">Selecione uma opção</option>
         <option value="pi">Pizza</option>
