adicionando mais comentarios e apagando arquivos desnecessarios

--- a/home.html
+++ b/home.html
@@ -23,16 +23,14 @@
         <option value="39">Entretenimento</option>
     </select>
 
-
-
     <select id="tipos" required="required">
         <option name="select" value="" selected="" disabled="">Selecione uma opção</option>
         <option value="pi">Pizza</option>
         <option value="ba">Barras</option>
     </select>
 
-    <div id="charts">
-    <canvas id="primeiroGrafico"></canvas>
+    <div name="chart"id="charts" style="position: relative; height: 40vh; width: 80vw">
+        <canvas id="primeiroGrafico" height="80vh" width="80vw"></canvas>
     </div>
 </body>
 </html>
