soluçao parcial para exibir resultados que nao gerem graficos

--- a/home.html
+++ b/home.html
@@ -24,7 +24,9 @@
         <option value="ba">Barras</option>
     </select>
 
-    <div class="chartsView" name="chart"></div>
+    <div class="chartsView" name="chart"></div><!--Div onde ficam os gráficos-->
+
+    <div class="noCharts" id="noCharts"></div>
 </body>
 </html>
 <script>
