adiçao de icone a pagina

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <script src="./js/processingCsv.js"></script>
     <script src="./js/processingAndCharts.js"></script>
     <link rel="stylesheet" href="./style/home.css" class="">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <input type="file" id="fileInput">
