--- a/home.html
+++ b/home.html
@@ -11,8 +11,15 @@
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <input type="file" id="fileInput">
-    <button onclick="inputData()">Inserir dados</button>
+
+    <header>
+        <div id="faculdade"><h1>Fatec</h1></div>
+        <div id="title"><h3>Sistemas de Informação - Perfil Socioeconômico</h3></div>
+    </header>
+    <div id="input">
+        <input type="file" id="fileInput">
+        <button onclick="inputData()">Inserir dados</button>
+    </div>
     <h1>Teste</h1>
     <h2>As cores são geradas automaticamente, cores parecidas não tem intenção de confundir</h2>
     <select id="resposta" required="required">
