--- a/home.html
+++ b/home.html
@@ -7,34 +7,38 @@
     <script src="./js/processingJson.js"></script>
     <script src="./js/processingCsv.js"></script>
     <script src="./js/processingAndCharts.js"></script>
-    <link rel="stylesheet" href="./style/home.css" class="">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
 
     <header>
-        <div id="faculdade"><h1>Fatec</h1></div>
-        <div id="title"><h3>Sistemas de Informação - Perfil Socioeconômico</h3></div>
+        <div class="navBar">
+            <div id="faculdade"><h1>FATEC</h1></div>
+            <div id="title"><h3>Sistemas de Informação - Perfil Socioeconômico</h3></div>
+        </div>
     </header>
     <div id="input">
         <input type="file" id="fileInput">
-        <button onclick="inputData()">Inserir dados</button>
+        <button onclick="inputData()" class="button">Inserir dados</button>
     </div>
-    <h1>Teste</h1>
-    <h2>As cores são geradas automaticamente, cores parecidas não tem intenção de confundir</h2>
-    <select id="resposta" required="required">
-        <option name="select" value="" selected="" disabled="">Selecione uma opção</option>
-    </select>
+    <div class="corpo">
+        <h4>As cores são geradas automaticamente, cores parecidas não tem intenção de confundir</h4>
 
-    <select id="tipos" required="required">
-        <option name="select" value="" selected="" disabled="">Selecione uma opção</option>
-        <option value="pi">Pizza</option>
-        <option value="ba">Barras</option>
-    </select>
+        <select id="resposta" required="required">
+            <option name="select" value="" selected="" disabled="">Selecione uma opção</option>
+        </select>
 
-    <div class="chartsView" name="chart"></div><!--Div onde ficam os gráficos-->
+        <select id="tipos" required="required">
+            <option name="select" value="" selected="" disabled="">Selecione uma opção</option>
+            <option value="pi">Pizza</option>
+            <option value="ba">Barras</option>
+        </select>
 
-    <div class="noCharts" id="noCharts"></div>
+        <div class="chartsView" name="chart"></div><!--Div onde ficam os gráficos-->
+
+        <div class="noCharts" id="noCharts"></div>
+    </div>
 </body>
 </html>
 <script>
